<resources>
    <string name="app_name">Tablecloth</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tablecloth</string>
    <string name="nav_header_subtitle">Cook at home!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_fridge">Fridge</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_search_ingredients">Search Ingredients</string>
    <string name="menu_about">About</string>
    <string name="about_us">
        Welcome to TableCloth.\n\nOur audience is anyone that cooks or wants to cook. We also have a portion of our app that is tailored towards college kids as sometimes we don’t have time to figure out what we want to make.\n\nThe fridge database solves this issue as we can auto-find recipes based on what we currently have. If someone wants to know a recipe for a food that they find interesting, they can take a picture of it and then they have the recipe for future reference.</string>
    <string name="ajit_text">Ajit is currently a 4th year Computer Science major at UCSB. In his free time he enjoys watching Food Network, specifically Chopped.</string>
    <string name="cindy_text">Cindy is a 4th year computer science major. She likes to bake and watch cakeboss and the great british baking show.y</string>
    <string name="wesley_text">Wesley is a currently a 4th year Computer Science major at UCSB. In his free time he likes to cook using recipes found from Tablecloth.</string>
    <string name="shu_text">Shu is currently a 4th year at UCSB studying computer science. Her friends love to call her by Shushi, Shu Mai, or BingShu. In her free time she likes to discover new music</string>

</resources>
