<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fridge"
            android:icon="@drawable/ic_fridge"
            android:title="@string/menu_fridge" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ic_search_ingredients"
            android:title="@string/menu_search_ingredients" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about"/>
    </group>


</menu>
