<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.ucsb.cs.cs184.tablecloth.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fridge"
        android:name="edu.ucsb.cs.cs184.tablecloth.ui.fridge.FridgeFragment"
        android:label="@string/menu_fridge"
        tools:layout="@layout/fragment_fridge" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="edu.ucsb.cs.cs184.tablecloth.ui.recipe.RecipeFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_ingredients"
        android:name="edu.ucsb.cs.cs184.tablecloth.ui.about.AboutFragment"
        android:label="@string/menu_search_ingredients"
        tools:layout="@layout/fragment_search_ingredients" />

    <fragment
        android:id="@+id/nav_about"
        android:name="edu.ucsb.cs.cs184.tablecloth.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>