<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/about_bg"
    android:backgroundTint="#99FFFFFF"
    android:backgroundTintMode="src_over">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="60dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/about_us"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/meet_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="60dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="Meet the Team"
                android:textColor="#030303"
                android:textSize="24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ajit_pic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ajit_p"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/ajit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:text="@string/ajit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cindy_pic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/cindy_p"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/cindy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:text="@string/cindy_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/wesley_pic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/wesley_p"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/wesley_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:text="@string/wesley_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/shu_pic"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/shu_p"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/shu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="15dp"
                    android:text="@string/shu_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>